Fixed svg alignment

--- a/P6_Data_Visualization_D3/css/style.css
+++ b/P6_Data_Visualization_D3/css/style.css
@@ -8,7 +8,7 @@ body {
 #wrapper {
     margin-left: auto;
     margin-right: auto;
-    width: 1200px;
+/*    width: 1200px;*/
 }
 
 #svg-wrapper svg {
